test/1.4/errors/T_ERETARGNAME.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;
device test;

method m1()
/// ERROR ERETARGNAME
    -> (int i) {
}

inline method n(inline i) ->
/// ERROR ERETARGNAME
    (int i) {
}
